# stup

./: .gitignore  LICENSE  README.md  help_output.txt  pyproject.toml
src/app/: __init__.py  cli.py  utils.py
src/app/commands/: __init__.py  activate.py  add.py  api.py  cli_cmd.py  django_cmd.py  docs.py  lang_agent.py  mean.py  mern.py  ml.py  next_django.py  notebook.py  openai_agent.py  react_fastapi.py  saas.py  scraper.py  test_cmd.py  uv.py
src/arrange/: __init__.py  cli.py  utils.py
src/arrange/commands/: __init__.py  activate.py  add.py  agent.py  api.py  cli_cmd.py  django_cmd.py  docs.py  mean.py  mern.py  ml.py  next_django.py  notebook.py  react_fastapi.py  saas.py  scraper.py  test_cmd.py  uv.py
test-minimal/: main.py  pyproject.toml
