[project]
name = "stup"
version = "0.1.0"
description = "Scaffold production-ready project structures in seconds. Install once, scaffold forever."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "teeon"},
]
keywords = ["cli", "scaffold", "boilerplate", "project-template", "uv", "fullstack"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Code Generators",
    "Topic :: Utilities",
]
dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
    "requests>=2.33.1",
]

[project.scripts]
stup = "app.cli:app"

[project.urls]
Homepage = "https://github.com/muhdaliyan/stup"
Repository = "https://github.com/muhdaliyan/stup"
Issues = "https://github.com/muhdaliyan/stup/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/app"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.uv.workspace]
members = [
    "test-scaffold",
    "test-minimal",
]

[dependency-groups]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]
